--- a/build.xml
+++ b/build.xml
@@ -35,6 +35,8 @@
     </copy>
   </target>
 
+  <target name="test" depends="compile">
+  </target>
 
   <target name="package" depends="compile">
     <jar jarfile="${dist}/speechrecorder.jar">
@@ -57,8 +59,9 @@
   
 
   </target>
+  
 
-
+  
   <target name="clean" description="Clean up" >
     <delete dir="${build}"/>
 <!--    <delete dir="${temp}"/> -->
