EN and RU now using MessageBundles

--- a/build.xml
+++ b/build.xml
@@ -49,6 +49,7 @@
         <include name="**/*.class"/>
         <include name="**/speechrecorder/prompts/*"/>
         <include name="**/speechrecorder/copyrights/*"/>
+        <include name="**/speechrecorder/languages/*"/>
       </fileset>
       <metainf dir="${include}/metainf/"/>
       <manifest>
