--- a/build.xml
+++ b/build.xml
@@ -47,6 +47,7 @@
   <target name="test" depends="compile">
   </target>
 
+<!-- creates standalone speechrecorder.jar -->	
   <target name="build" depends="compile">
     <jar jarfile="${dist}/speechrecorder.jar">
       <fileset dir="${build.java}">
@@ -89,6 +90,7 @@ for ant; needed: sudo apt-get install ant-contrib
         uri="javafx:com.sun.javafx.tools.ant"
         classpath="${javafx.sdk.path}/lib/ant-javafx.jar"/>	
 	
+<!-- creates speechrecorder.jar to be included in deb or rpm package-->		
 	<target name="package_jar" depends="build">
 		<fx:jar destfile="dist-vf/speechrecorder.jar">
 		    <fx:application mainClass="speechrecorder.RecorderApplication"/>
@@ -96,7 +98,6 @@ for ant; needed: sudo apt-get install ant-contrib
 		        <include name="**/*.class"/>
 		        <include name="**/speechrecorder/prompts/*"/>
 		        <include name="**/speechrecorder/copyrights/*"/>
-		        <include name="**/voxforge.png"/>
 		      </fileset>
 		</fx:jar>
 	</target>
@@ -111,13 +112,14 @@ for ant; needed: sudo apt-get install ant-contrib
 		    	mainClass="speechrecorder.RecorderApplication"/>
 		    <fx:resources>
 		        <fx:fileset dir="dist" includes="speechrecorder.jar"/>
-		        <fx:fileset dir="dist" type="license" includes="speechrecorder/LICENSE"/>
+		        <fx:fileset dir="dist" type="license" includes="**/speechrecorder/LICENSE"/>
+		        <fx:fileset dir="dist" type="icon" includes="**/voxforge.png"/>
 		    </fx:resources>
-		    <fx:info title="speechrecorder" vendor="voxforge"/>
-			<fx:info>
-			    <fx:icon href="${build.java}/voxforge.png"></fx:icon>
+		    <fx:info title="speechrecorder_dialogBox" 
+		    		 vendor="voxforge_dialogBox"
+		    		 license="speechrecorder/LICENSE">
+				<fx:splash href="voxforge.png" />
 			</fx:info>
-			<fx:info license="${build.java}/LICENSE"/>
 
 		</fx:deploy>
 	</target>
